--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -6,7 +6,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" href="http://localhost:3000/Home">Home</a>
+          <a class="nav-link active" href="/Home">Home</a>
           <a class="nav-link" href="/listings">All Product</a>
           <a class="nav-link" href="/listings/new">Add new Product</a>
         </div>
