--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>EcoTrack360</title>
+  <title>Eco-Vision</title>
   <meta charset="UTF-8">
   <meta name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
