--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -50,7 +50,7 @@
           <img src="/imagekol/logo1.jpg" alt="EcoHub Logo" id="logo-img" style="padding-right: 1vw; width: 50px;">
         </li>
         <li class="btn" style="padding-left: 44vw;">
-          <button class="button-33" role="button"><a href="/Home">Home</a></button>
+          <button class="button-33" role="button"><a href="/Home">Home360</a></button>
           <button class="button-33" role="button"><a href="/Service">Service</a></button>
           <button class="button-33" role="button"><a href="/listings">Products</a></button>
           <button class="button-33" role="button"><a href="/Ourmission">About</a></button>
