--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -416,7 +416,7 @@
       </li>
       <li>
         <a href="/Ourmission" style="color: #eee;">Our Mission</a>
-        <a href="/Sustainability_Goals" style="color: #eee;">Sustainability Goals</a>
+        <a href="/sustainability_Goals" style="color: #eee;">Sustainability Goals</a>
         <a href="/Green_Initiatives" style="color: #eee;">Green Initiatives</a>
       </li>
       <li>
