--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -416,20 +416,20 @@
       </li>
       <li>
         <a href="/Ourmission" style="color: #eee;">Our Mission</a>
-        <a href="/Sustainability_Goals" style="color: #eee;">Sustainability Goals</a>
-        <a href="/Green_Initiatives" style="color: #eee;">Green Initiatives</a>
+        <a href="/sustainabilityGoals" style="color: #eee;">Sustainability Goals</a>
+        <a href="/greenInitiatives" style="color: #eee;">Green Initiatives</a>
       </li>
       <li>
-        <a href="/Help_Center" style="color: #eee;">Help Center</a>
-        <a href="/Shipping_Information" style="color: #eee;">Shipping Information</a>
-        <a href="/Return_Policy" style="color: #eee;">Return Policy</a>
-        <a href="/Payment_Methods" style="color: #eee;">Payment Methods</a>
+        <a href="/helpCenter" style="color: #eee;">Help Center</a>
+        <a href="/shippingInformation" style="color: #eee;">Shipping Information</a>
+        <a href="/returnPolicy" style="color: #eee;">Return Policy</a>
+        <a href="/paymentMethods" style="color: #eee;">Payment Methods</a>
       </li>
       <li>
-        <a href="/Organic_Clothing" style="color: #eee;">Organic Clothing</a>
-        <a href="/Reusable_Items" style="color: #eee;">Reusable Items</a>
-        <a href="/Eco_Gadget" style="color: #eee;">Eco-Gadgets</a>
-        <a href="/Zero_Waste_Products" style="color: #eee;">Zero-Waste Products</a>
+        <a href="/organicClothing" style="color: #eee;">Organic Clothing</a>
+        <a href="/reusableItems" style="color: #eee;">Reusable Items</a>
+        <a href="/ecoGadget" style="color: #eee;">Eco-Gadgets</a>
+        <a href="/zeroWasteProducts" style="color: #eee;">Zero-Waste Products</a>
       </li>
       <li>
         <img src="../imagekol/facebook_5968764.png"  alt="facebook" style="cursor: pointer;" onclick="window.location.href='https://facebook.com'">
