--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -420,7 +420,7 @@
         <a href="/greenInitiatives" style="color: #eee;">Green Initiatives</a>
       </li>
       <li>
-        <a href="/helpCenter" style="color: #eee;">Help Center</a>
+        <a href="/HelpCenter" style="color: #eee;">Help Center</a>
         <a href="/shippingInformation" style="color: #eee;">Shipping Information</a>
         <a href="/returnPolicy" style="color: #eee;">Return Policy</a>
         <a href="/paymentMethods" style="color: #eee;">Payment Methods</a>
