--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -78,7 +78,9 @@
     <div class="slider">
       <div class="list">
         <div class="item">
-          <img src="../imagekol/img1.jpeg" alt="">
+          <video>
+  <source src="../imagekol/video1.mp4" type="video/mp4">
+</video>
         </div>
         <div class="item">
           <img src="../imagekol/img2.jpeg" alt="">
