--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -49,6 +49,7 @@
         <li class="ico">
           <img src="/imagekol/logo1.jpg" alt="EcoHub Logo" id="logo-img" style="padding-right: 1vw; width: 50px;">
         </li>
+        <p>Eco-Vision-360</p>
         <li class="btn" style="padding-left: 44vw;">
           <button class="button-33" role="button"><a href="/Home">Home360</a></button>
           <button class="button-33" role="button"><a href="/Service">Service</a></button>
