--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -79,7 +79,7 @@
     <div class="slider">
       <div class="list">
         <div class="item">
-          <video>
+          <video autoplay muted>
   <source src="../imagekol/video1.mp4" type="video/mp4">
 </video>
         </div>
