--- a/public/css/hub.css
+++ b/public/css/hub.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+PL+Guides&family=Rubik+Wet+Paint&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playwrite+PL+Guides&display=swap');
 
 * {
   margin: 0;
