--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -84,16 +84,24 @@
 </video>
         </div>
         <div class="item">
-          <img src="../imagekol/img2.jpeg" alt="">
+          <video autoplay muted loop >
+  <source src="../imagekol/video2.mp4" type="video/mp4">
+</video>
         </div>
         <div class="item">
-          <img src="../imagekol/img3.jpeg" alt="">
+         <video autoplay muted loop >
+  <source src="../imagekol/video3.mp4" type="video/mp4">
+</video>
         </div>
         <div class="item">
-          <img src="../imagekol/img4.jpeg" alt="">
+         <video autoplay muted loop >
+  <source src="../imagekol/video4.mp4" type="video/mp4">
+</video>
         </div>
         <div class="item">
-          <img src="../imagekol/img5.jpeg" alt="">
+          <video autoplay muted loop >
+  <source src="../imagekol/video5.mp5.mp4" type="video/mp4">
+</video>
         </div>
       </div>
       <!-- for two buttons  -->
