--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -15,7 +15,7 @@
     display: flex;
     transition: 1s;
 }
-.slider .list img{
+.slider .list item{
     width: 100vw;
     max-width: 100vw;
     height: 100%;
