--- a/public/css/slider.css
+++ b/public/css/slider.css
@@ -15,11 +15,23 @@
     display: flex;
     transition: 1s;
 }
-.slider .list item{
+
+
+
+.item {
     width: 100vw;
-    max-width: 100vw;
+    height: 700px; /* Matches slider height */
+    flex-shrink: 0; /* Prevents shrinking */
+    overflow: hidden; /* Hides video overflow */
+    position: relative; /* For absolute child (video) */
+}
+.item video {
+    width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: cover; /* Forces video to fill container */
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 .slider .buttons{
     position: absolute;
