Update hub.css By ARKAN

--- a/public/css/hub.css
+++ b/public/css/hub.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Moon+Dance&family=Neonderthaw&family=Norican&family=Oleo+Script:wght@400;700&family=Playball&family=Shalimar&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Norican&family=Oleo+Script:wght@400;700&family=Orbitron:wght@400..900&family=Playball&display=swap');
 
 * {
   margin: 0;
