--- a/public/css/hub.css
+++ b/public/css/hub.css
@@ -23,8 +23,9 @@ ul {
 }
 input { width: 36em; height: 25px; } 
 body>header>nav>ul>p {
-  font-family: "Playball", cursive;
-  font-weight: 400;
+  font-family: "Orbitron", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
   font-style: normal;
 }
 .eco-vision{margin-bottom:0;}
