--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -122,7 +122,7 @@
   <div id="cont" class="content"
     style="position: relative; border-radius: 1px; padding: 4px; background: linear-gradient(135deg, #09090981, #ffffff, #0000007f); background-size: 400% 400%; animation: borderWave 8s ease infinite;">
     <div style="border-radius: 10px; background: #ffffff; padding: 20px;">
-      <h1 style="margin: 0; color: #000000; display: flex; justify-content: center;  font-family: "Orbitron"; font-optical-sizing: auto; font-weight: 700; font-style: normal;">Welcome to Eco-Vision
+      <h1 style="margin: 0; color: #000000; display: flex; justify-content: center;  font-family: 'Orbitron'; font-optical-sizing: auto; font-weight: 700; font-style: normal;">Welcome to Eco-Vision
       </h1>
     </div>
   </div>
