--- a/public/css/hub.css
+++ b/public/css/hub.css
@@ -16,7 +16,7 @@ header {
 nav {
   display: flex;
   gap: 17vw;
-  background-color: #f8df7b; color: #00A6D6; border: 2px solid rgb(107, 240, 93); height: 3.5em;
+  background-color: #f8df7b; color: #16171a; border: 2px solid rgb(107, 240, 93); height: 3.5em;
 }
 ul {
   height: 3.5em; display: flex; justify-content: center; align-items: center; list-style: none; flex-wrap: wrap; gap: 4vw; margin: 0; padding: 0; overflow: hidden;
@@ -197,7 +197,7 @@ li:first-child { margin-left: 0;}
   }.button-33:hover::after {
     width: 100%;
   }.button-33 a {
-    color: inherit;
+    color: black;
     text-decoration: none;
   }
   /* log in */
