--- a/views/listings/cltest.ejs
+++ b/views/listings/cltest.ejs
@@ -33,7 +33,7 @@
     <div class="card">
         <h1>To confirm <span class="highlight"><%= name %></span>'s purchase you must pay through upi 👇⬇️</h1>
         <p>Confirm you purchase </p>
-          <img src="../imagekol/scanner1.jpeg" alt="My Image" height="500" width="500">
+          <img src="/imagekol/scanner1.jpeg" alt="My Image" height="500" width="500">
         <h1>⬆️ Scan this QR code ☝️</h1>
         <h1>(★‿★)</h1>
     </div>
