Update index.ejs by ARKAN

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -397,21 +397,21 @@
         <h3>Follow Us</h3>
       </li>
       <li>
-        <a href="/Ourmission" style="color: #eee;">Our Mission</a>
-        <a href="/SustainabilityGoals" style="color: #eee;">Sustainability Goals</a>
-        <a href="/GreenInitiatives" style="color: #eee;">Green Initiatives</a>
+        <a href="/Ourmission" style="color: #1e1717;">Our Mission</a>
+        <a href="/SustainabilityGoals" style="color: #1e1717;">Sustainability Goals</a>
+        <a href="/GreenInitiatives" style="color: #1e1717;">Green Initiatives</a>
       </li>
       <li>
-        <a href="/HelpCenter" style="color: #eee;">Help Center</a>
-        <a href="/ShippingInformation" style="color: #eee;">Shipping Information</a>
-        <a href="/ReturnPolicy" style="color: #eee;">Return Policy</a>
-        <a href="/PaymentMethods" style="color: #eee;">Payment Methods</a>
+        <a href="/HelpCenter" style="color: #1e1717;">Help Center</a>
+        <a href="/ShippingInformation" style="color: #1e1717;">Shipping Information</a>
+        <a href="/ReturnPolicy" style="color: #1e1717;">Return Policy</a>
+        <a href="/PaymentMethods" style="color: #1e1717;">Payment Methods</a>
       </li>
       <li>
-        <a href="/OrganicClothing" style="color: #eee;">Organic Clothing</a>
-        <a href="/ReusableItems" style="color: #eee;">Reusable Items</a>
-        <a href="/EcoGadget" style="color: #eee;">Eco-Gadgets</a>
-        <a href="/ZeroWasteProducts" style="color: #eee;">Zero-Waste Products</a>
+        <a href="/OrganicClothing" style="color: #1e1717;">Organic Clothing</a>
+        <a href="/ReusableItems" style="color: #1e1717;">Reusable Items</a>
+        <a href="/EcoGadget" style="color: #1e1717;">Eco-Gadgets</a>
+        <a href="/ZeroWasteProducts" style="color: #1e1717;">Zero-Waste Products</a>
       </li>
       <li>
         <img src="../imagekol/facebook_5968764.png"  alt="facebook" style="cursor: pointer;" onclick="window.location.href='https://facebook.com'">
@@ -423,8 +423,8 @@
   </div>
 <p>
   DNS Powered by 
-  <a href="http://www.dnsExit.com" style="color: #006699;">DNS</a>
-  <a href="http://www.dnsExit.com" style="color: #FF6600;">EXIT.COM</a>
+  <a href="http://www.dnsExit.com" style="color: white;">DNS</a>
+  <a href="http://www.dnsExit.com" style="color: white;">EXIT.COM</a>
   – Free Dynamic, Static DNS Services.
 </p>
   <p id="endp">&copy; 2025 Eco-Vision | Designed with sustainability in mind</p>
