Update index.ejs by ARKAN

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -421,7 +421,7 @@
       </li>
     </ul>
   </div>
-<p>
+<p id="sesp">
   DNS Powered by 
   <a href="http://www.dnsExit.com" style="color: white;">DNS</a>
   <a href="http://www.dnsExit.com" style="color: white;">EXIT.COM</a>
