Update index.ejs by ARKAN

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -422,8 +422,10 @@
     </ul>
   </div>
 <p> 
-  <a href="http://www.dnsExit.com" style="color: white;">DNS</a>
-  <a href="http://www.dnsExit.com" style="color: white;">EXIT.COM</a>
+   DNS Powered by
+  <a href="http://www.dnsExit.com" style="color: #006699;">DNS</a>
+  <a href="http://www.dnsExit.com" style="color: #FF6600;">EXIT.COM</a>
+  – Free Dynamic, Static DNS Services.
 </p>
   <p id="endp">&copy; 2025 Eco-Vision | Designed with sustainability in mind</p>
   <script src="../js/Slider.js"></script>
