Update index.ejs (testing with video)

--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -405,7 +405,7 @@
         <a href="/HelpCenter" style="color: #1e1717;">Help Center</a>
         <a href="/ShippingInformation" style="color: #1e1717;">Shipping Information</a>
         <a href="/ReturnPolicy" style="color: #1e1717;">Return Policy</a>
-        <a href="/PaymentMethods" style="color: #1e1717;">Payment Methods</a>
+        <a href="/payment" style="color: #1e1717;">Payment Methods</a>
       </li>
       <li>
         <a href="/OrganicClothing" style="color: #1e1717;">Organic Clothing</a>
